--- a/youtube-react/package.json
+++ b/youtube-react/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "nuka-carousel": "^4.5.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1",
     "youtube-api-search": "0.0.5",
     "youtube-api-v3-search": "^1.2.1"
   },
