add search button

--- a/youtube-react/package.json
+++ b/youtube-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "nuka-carousel": "^4.5.3",
