add link recent

--- a/youtube-react/package.json
+++ b/youtube-react/package.json
@@ -9,7 +9,9 @@
     "nuka-carousel": "^4.5.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-share": "^2.4.0",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1",
     "youtube-api-search": "0.0.5",
